[package]
name = "hellorust"
version = "0.0.0"
edition = "2021"

[dependencies]
actix-web = "4"
json = "0.12.4"
mysql = "23.0.0"
dotenv = "*"
serde = { version = "1.0", features = ["derive"] }
reqwest = "*"
actix-files = "*"
rand = "*"
chrono = "0.4"
time = "*"
mysql_common = { version = "*", features = ["chrono"] }